--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,12 @@
     <string name="channel_name">SHOPPING LIST CHANNEL</string>
     <string name="channelID">SHOPPING LIST ID</string>
     <string name="channel_description">\"Shopping list app group notification channel\"</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="website">Website</string>
+    <string name="next_photo">Next Photo</string>
+    <string name="play_pause">Play/Pause</string>
+    <string name="stop">Stop</string>
+    <string name="next_song">Next Song</string>
+    <string name="not_playing">Not playing</string>
 </resources>
